# aretex_wa

./: MANIFEST.in.txt  README.md  pre-commit-config.yaml  pyproject.toml  setup.py
.github/workflows/: ci.yml  linters.yml
aretex_wa/: api_background_tasks.py  hooks.py  install.py  whatsapp_handler.py
aretex_wa.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
aretex_wa/tests/: test_basic.py
