[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aretex_wa"
version = "0.0.1"
description = "Aretex WhatsApp Integration"
authors = [
    { name="Aretex", email="algo@aretex.com" }
]
dependencies = []

[tool.bench.frappe-dependencies]
frappe = ">=16.0.0 <17.0.0"
