[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "aretex_wa"
version = "0.1.0"
description = "Aretex WhatsApp Integration"
authors = [
    { name="Aretex", email="algo@aretex.com" }
]
dependencies = []

[tool.bench.frappe-dependencies]
frappe = ">=15.0.0,<16.0.0"